# udf-mock-python

./: .gitattributes  .gitignore  README.md  README.rst  SECURITY.md  noxconfig.py  poetry.sh  pyproject.toml  setup.py  version.py
.github/: pull_request_template.md
.github/actions/prepare_poetry_env/: action.yaml  action.yml
.github/workflows/: check_setup_py.yaml  pypi_release.yaml  pytest.yaml  test.yaml
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.3.0.md  changes_0.3.1.md  changes_0.4.0.md  changes_0.5.0.md  unreleased.md
exasol_udf_mock_python/: group.py  mock_context.py  mock_context_run_wrapper.py  mock_meta_data.py  mock_test_executor.py  udf_mock_executor.py
githooks/: update_setup_py.sh
tests/: test_executor_context.py  test_executor_context_scalar_returns.py  test_executor_context_set_emits.py  test_executor_exa_meta.py  test_executor_syntax.py  test_group.py  test_mock_context.py  test_mock_context_standalone.py  test_mock_test_executor.py
